<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/goto_camera"
        android:icon="@drawable/ic_action_camera"
        android:title="@string/camera"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/multi_select"
        android:icon="@drawable/ic_action_checkbox_unchecked"
        android:title="@string/multi_select"
        android:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/select_all"
        android:icon="@android:drawable/ic_notification_overlay"
        android:title="@string/select_all" />
    <item
        android:id="@+id/deselect_all"
        android:icon="@android:drawable/ic_notification_clear_all"
        android:title="@string/deselect_all" />
    <item
        android:id="@+id/change_password"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/change_password" />
    <item
        android:id="@+id/settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings" />
    <item
        android:id="@+id/read_security"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/read_security" />
    <item
        android:id="@+id/logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/log_out" />

</menu>