<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/main_bg_color" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="15dp"
        android:orientation="horizontal" >

        <ImageButton
		    android:id="@+id/gotoCamera"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="3"
		    android:contentDescription="@string/camera"
		    android:scaleType="fitCenter"
		    android:background="@null"
		    android:src="@drawable/safe_camera_logo"
		    android:layout_gravity="center" />

        <ImageView
			android:layout_width="0dp"
			android:layout_height="6dp"
			android:layout_weight="1"
			android:layout_gravity="center"
			android:layout_marginLeft="5dp"
			android:layout_marginRight="5dp"
			android:src="@drawable/vseparator"
			android:scaleType="fitCenter"
			android:contentDescription="@string/app_name" />
        
        <ImageButton
		    android:id="@+id/gotoGallery"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="3"
		    android:contentDescription="@string/gallery"
		    android:scaleType="fitCenter"
		    android:background="@null"
		    android:src="@drawable/safe_camera_logo"
		    android:layout_gravity="center" />
	    
    </LinearLayout>

     
	<TextView
	    android:id="@+id/free_version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/free_version_text"
        android:gravity="center"
        android:autoLink="web"
        android:textSize="12sp"
        android:paddingBottom="2dp" />
	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/bottom_text"
        android:gravity="center"
        android:autoLink="web"
        android:paddingBottom="10dp" />
</LinearLayout>