<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/topPanel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="2dp" >

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleSmall"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/multi_select"
            android:layout_height="35dp"
            android:layout_width="35dp"
            android:scaleType="fitCenter"
            android:layout_margin="2dp"
            android:padding="0dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:src="@drawable/checkbox_unchecked" />

    </RelativeLayout>

    <GridView
        android:id="@+id/photosGrid"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:columnWidth="100dp"
        android:gravity="center"
        android:horizontalSpacing="1dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:smoothScrollbar="true"
        android:saveEnabled="true"
        android:persistentDrawingCache="all"
        android:verticalSpacing="1dp" >
    </GridView>
    
    <LinearLayout
        android:id="@+id/bottomPanel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="2dp" >

        
        
        <ImageButton
            android:id="@+id/encryptFiles"
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:scaleType="centerCrop"
            android:layout_margin="2dp"
            android:padding="0dp"
            android:background="@null"
            android:contentDescription="@string/encrypt_files"
            android:src="@drawable/add_button" />
        
        <ImageButton
            android:id="@+id/decryptSelected"
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:scaleType="centerCrop"
            android:layout_margin="2dp"
            android:padding="0dp"
            android:background="@null"
            android:contentDescription="@string/decrypt"
            android:src="@drawable/unlock_button" />
        
        <ImageButton
            android:id="@+id/share"
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:scaleType="centerCrop"
            android:layout_margin="2dp"
            android:padding="0dp"
            android:background="@null"
            android:contentDescription="@string/share"
            android:src="@drawable/share_button" />
        
        <ImageButton
            android:id="@+id/newFolder"
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:scaleType="centerCrop"
            android:layout_margin="2dp"
            android:padding="0dp"
            android:background="@null"
            android:contentDescription="@string/new_folder"
            android:src="@drawable/new_folder_button" />
        
        <ImageButton
            android:id="@+id/moveSelected"
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:scaleType="centerCrop"
            android:layout_margin="2dp"
            android:padding="0dp"
            android:background="@null"
            android:contentDescription="@string/move"
            android:src="@drawable/move_button" />
        
        <ImageButton
            android:id="@+id/deleteSelected"
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:scaleType="centerCrop"
            android:layout_margin="2dp"
            android:padding="0dp"
            android:background="@null"
            android:contentDescription="@string/delete"
            android:src="@drawable/delete_button" />

    </LinearLayout>

</LinearLayout>